# Scannettes

./: .gitignore  .pre-commit-config.yaml  .pre-commit-congig.yaml  .pylintrc  CHANGELOG.md  Dockerfile  Dockerfile.template  Pipfile  README.md  Scannettes.html  app.py  boot.sh  classes.py  config.py.template  docker-compose.yml.template  pyproject.toml  requirements.txt  set_users_config.py  stack.yml  utils.py  wsgi.py  wsgi_v2.py
application/: __init__.py  app.py  config.py.template  whitelist.txt.template
application/static/css/: lobby.css  room_mobile.css
application/static/js/: camera.js  global_functions.js  lobby.js  (+4 more)
application/templates/: lobby.html  login.html  room.html  room_inventory_mobile.html  room_mobile.html
cannettes/: __init__.py  config.py  main.py
cannettes/templates/: doc.html  lobby.html  login.html
cannettes_v2/: __init__.py  authenticator.py  decorators.py  hooks.py  main.py  parsers.py  utils.py
cannettes_v2/handlers/: events.py  routes.py
cannettes_v2/models/: product.py  purchase.py  room.py  state_handler.py  user.py
cannettes_v2/odoo/: deliveries.py  inventories.py  lobby.py  odoo.py
cannettes_v2/templates/: lobby.html  lobby_admin_v2.html  lobby_v2.html  login.html  room.html  room_admin_v2.html  room_v2.html
cannettes_v2/tools/: backup.py  log.py  mail.py  pdf.py
examples/: .env.template  Scannettes.html
flask/: app.py  config.py.template
flask/templates/: login.html  room_mobile.html
scannettes/: __init__.py  authenticator.py  decorators.py  main.py  utils.py
scannettes/handlers/: events.py  routes.py
scannettes/models/: product.py  purchase.py  room.py  state_handler.py
scannettes/odoo/: deliveries.py  inventories.py  lobby.py  odoo.py
scannettes/templates/: doc.html  lobby.html  login.html  room.html  stock.html  stocks.html
scannettes/tools/: authenticator.py  backup.py  decorators.py  log.py  parsers.py  pdf.py  utils.py
scannettes_configs/: scannettes_config.yaml.example  secrets.yaml.example
scripts/: set_users_config.py
static/: camera.js  global_functions.js  lobby.css  lobby.js  login.js  room.css  room.js  room_mobile.js
templates/: lobby.html  login.html  room.html  room_mobile.html
(+90 files in other folders)
